# find-eq

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/find_eq/: __init__.py
tests/: test_find_equilibrium.py  test_pathological.py
