[project]
name = "find-eq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max R. P. Grossmann", email = "m@max.pm" }
]
requires-python = ">=3.13"
license = "0BSD"
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=6", "black>=24", "mypy>=1.10"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov=find_eq --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["src/find_eq"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
